--- a/style.css
+++ b/style.css
@@ -1,22 +1,50 @@
+* {
+	box-sizing: border-box;
+}
+body {
+	text-align: center;
+	padding: 60px 0;
+}
+h1 {
+	text-align:center;
+	font-size: 30px;
+	font-weight: bold;
+	margin-bottom: 40px;
+}
+
 h2 {
-	margin: 0;
-	padding: 0;
+	text-align:center;
+	font-size: 24px;
+	font-weight: bold;
 }
 
+#tracker {
+	display: inline-grid;
+	grid-template-columns: auto auto;
+	place-items: center;
+	gap: 10px;
+}
 .habit {
-	display: flex;
-	gap: 5px;
-	margin-bottom: 10px;
-	align-items: center;
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
 }
 
-.habit h2 {
-	margin-right: 10px;
-}
-
-.day {
+.day, .date {
 	height: 20px;
 	width: 20px;
+} 
+
+.day {
 	background: #eeeeee;
 	border: 1px solid black;
-} 
+}
+
+.date {
+	display: grid;
+	place-items: center;
+}
+
+.day.today:hover, .day.done {
+	background: green;
+	cursor: pointer;
+}
